--- a/hyperlinks.html
+++ b/hyperlinks.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,9 +7,8 @@
 <body>
     <header><a href="index.html">Web Programmierung</a></header>
     <main>
-        <h1>Grundlegendes</h1>
-        <p>Hier ist mein <em>aufregender Inhalt.</em></p>
-        <p><em>So eine tolle Website</em> muss erst mal erstellt werden. Wer kann es besser?</p>
+        <h1>Hyperlinks</h1>
+        Leider noch kein weitere Inhalt.
     </main>
     <footer>
         Weitere Informationen zu
