Did some changes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
         <h1>Grundlegendes</h1>
         <p>Hier ist mein <em>aufregender Inhalt.</em></p>
+        <p>Hier eine Änderung</p>
         <p><em>So eine tolle Website</em> muss erst mal erstellt werden. Wer kann es besser?</p>
     </main>
     <footer>
