Änderungen zurück genommen

--- a/flex.html
+++ b/flex.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="index.css" rel="stylesheet">
+    <link href="flex.css" rel="stylesheet">
 </head>
 <body>
+    <!--
+        go to
+        https://flexbox.tech/
+        for a cool flexbox toolbox
+    -->
     <header>header</header>
     <nav>nav</nav>
     <main>main</main>
