--- a/grid.html
+++ b/grid.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="index.css" rel="stylesheet">
+    <link href="grid.css" rel="stylesheet">
 </head>
 <body>
     <header>header</header>
